[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edon-openclaw"
version = "0.1.0"
description = "EDON governance for OpenClaw/Clawdbot agents — govern every tool call your Telegram bot makes"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "EDON Core", email = "sdk@edoncore.com" }]
keywords = ["openclaw", "clawdbot", "telegram", "ai", "governance", "agents", "edon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = [
    "edon>=0.1.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://edoncore.com"
Documentation = "https://docs.edoncore.com"
Repository = "https://github.com/EDONCORE/edon-openclaw"
Issues = "https://github.com/EDONCORE/edon-openclaw/issues"
